<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/dialog_bg"
    android:orientation="vertical">

    <!-- 提示标题 -->

    <TextView
        android:id="@+id/titleTv"
        android:layout_width="match_parent"
        android:layout_height="50dip"
        android:gravity="center"
        android:text="@string/tip"
        android:textColor="@color/confirm_tip_text"
        android:textSize="16.5dip" />

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="1px"
        android:background="@color/dialog_line_color" />

    <!-- 提示内容 -->

    <TextView
        android:id="@+id/contentTv"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:lineSpacingMultiplier="1.5"
        android:orientation="horizontal"
        android:padding="15dip"
        android:text="@string/default_tip_content"
        android:textColor="@color/confirm_content_text"
        android:textSize="16.5dip" />

    <!-- 确定 取消 按钮 -->

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="1px"
        android:background="@color/dialog_line_color" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="50dip"
        android:orientation="horizontal">

        <Button
            android:id="@+id/cancelBtn"
            android:layout_width="0dip"
            android:layout_height="50dip"
            android:layout_margin="2dip"
            android:layout_weight="1"
            android:background="@color/dialog_btn_bg"
            android:gravity="center"
            android:text="@string/cancel"
            android:textColor="@color/dialog_btn_text"
            android:textSize="16.5dip" />

        <ImageView
            android:layout_width="1px"
            android:layout_height="match_parent"
            android:background="@color/dialog_line_color"/>

        <Button
            android:id="@+id/okBtn"
            android:layout_width="0dip"
            android:layout_height="50dip"
            android:layout_margin="2dip"
            android:layout_weight="1"
            android:background="@color/dialog_btn_bg"
            android:gravity="center"
            android:text="@string/ok"
            android:textColor="@color/dialog_btn_text"
            android:textSize="16.5dip" />
    </LinearLayout>

</LinearLayout>