<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/pop_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/dialog_bg"
    android:orientation="vertical">

    <TextView
        android:id="@+id/dialog_title_textview"
        android:layout_width="match_parent"
        android:layout_height="50dip"
        android:gravity="center"
        android:text="@string/select_time_text"
        android:textColor="@color/dialog_tip_text"
        android:textSize="16.5dip" />

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="1px"
        android:background="@color/dialog_line_color" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:paddingLeft="15dip"
        android:paddingRight="15dip">

        <com.android.library.ui.view.WheelView
            android:id="@+id/date_wheel"
            android:layout_width="0dip"
            android:layout_height="138dp"
            android:layout_weight="1" />

        <com.android.library.ui.view.WheelView
            android:id="@+id/hour_wheel"
            android:layout_width="0dip"
            android:layout_height="138dp"
            android:layout_weight="1" />

        <com.android.library.ui.view.WheelView
            android:id="@+id/minute_wheel"
            android:layout_width="0dip"
            android:layout_height="138dp"
            android:layout_weight="1" />
    </LinearLayout>

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="1px"
        android:background="@color/dialog_line_color"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="50dip"
        android:orientation="horizontal">

        <Button
            android:id="@+id/dialog_cancel_button"
            android:layout_width="0dip"
            android:layout_height="50dip"
            android:layout_weight="1"
            android:background="@color/dialog_btn_bg"
            android:gravity="center"
            android:text="@string/cancel"
            android:textColor="@color/dialog_btn_text"
            android:textSize="14sp" />

        <ImageView
            android:layout_width="1px"
            android:layout_height="match_parent"
            android:background="@color/dialog_line_color" />

        <Button
            android:id="@+id/dialog_sure_button"
            android:layout_width="0dip"
            android:layout_height="50dip"
            android:layout_weight="1"
            android:background="@color/dialog_btn_bg"
            android:gravity="center"
            android:text="@string/ok"
            android:textColor="@color/dialog_btn_text"
            android:textSize="14sp" />
    </LinearLayout>

</LinearLayout>